--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-  <title>Are You a Tourist?</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <title>ARE YOU A TOURIST?</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <div>
-    <h1>Are You A Tourist?</h1>
-    <a href="https://open.spotify.com/artist/1mhe70fSiQDyc16JVlhBUE">Find out on Spotify</a>
+
+  <div id="video">
+    <div id="player">
+      <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/VOIqYt14GHQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+    </div>
+
   </div>
+
+  <div id="modal">
+
+    <div class="question">Are You A Tourist?</div>
+
+    <div class="buttons">
+      
+      <div class="tixLink button">
+        <a href="https://www.24tix.com/event/1919962112/michael-barrow-%26-the-tourists">Find Out Live At Velour</a>
+      </div>
+
+      <div class="spotifyLink button">
+        <a href="spotify:artist:1mhe70fSiQDyc16JVlhBUE">Find Out On Spotify</a>
+      </div>
+
+    </div>
+
+  </div>
+
+    
+
+  <script type="text/javascript">
+    var tag = document.createElement('script');
+
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('player', {
+        frameborder: '0',
+        height: '480',
+        width: '800',
+        videoId: 'VOIqYt14GHQ',
+        events: {
+          'onReady': onPlayerReady,
+          'onStateChange': onPlayerStateChange
+        }
+      });
+    }
+
+    function onPlayerReady(event) {
+      event.target.playVideo();
+    }
+
+    function onPlayerStateChange(state) {
+      if (state.data === 0) {
+        document.getElementById("video").style.display = "none";
+        document.getElementById("modal").style.display = "flex";
+      }
+    }
+
+  </script>
 </body>
 </html>
